[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Menus/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GamepadCont" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 184.0

[node name="GAction" type="Label" parent="GamepadCont"]
margin_left = 16.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 172.0
text = "MOVEMENT / AIM

ROLL

ATTACK
CAST SPELL

INTERACT

PAUSE
INVENTORY"

[node name="GBind" type="Label" parent="GamepadCont"]
margin_left = 160.0
margin_top = 32.0
margin_right = 296.0
margin_bottom = 172.0
text = "L-STICK

[B]

[A]
[X]

[Y]

[START]
[OPTION]"
align = 2

[node name="KeyboardCont" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 184.0

[node name="KAction" type="Label" parent="KeyboardCont"]
margin_left = 16.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 172.0
text = "MOVEMENT / AIM

ROLL

ATTACK
CAST SPELL

INTERACT

PAUSE
INVENTORY"

[node name="KBind" type="Label" parent="KeyboardCont"]
margin_left = 160.0
margin_top = 32.0
margin_right = 296.0
margin_bottom = 172.0
text = "[W] [A] [S] [D]

SPACE

L-Mouse Button
R-Mouse Button

[E]

[ESC]
[TAB]"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -14.0
margin_right = 48.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../../GamepadButton")
focus_neighbour_bottom = NodePath("../../GamepadButton")
text = "BACK"

[node name="GamepadButton" type="Button" parent="."]
pause_mode = 2
margin_left = 56.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../KeyboardButton")
focus_neighbour_top = NodePath("../VBoxContainer/BackButton")
focus_neighbour_right = NodePath("../KeyboardButton")
focus_neighbour_bottom = NodePath("../VBoxContainer/BackButton")
text = "GAMEPAD"

[node name="KeyboardButton" type="Button" parent="."]
pause_mode = 2
margin_left = 192.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../GamepadButton")
focus_neighbour_top = NodePath("../VBoxContainer/BackButton")
focus_neighbour_right = NodePath("../GamepadButton")
focus_neighbour_bottom = NodePath("../VBoxContainer/BackButton")
text = "KEYBOARD"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="GamepadButton" to="." method="_on_GamepadButton_pressed"]
[connection signal="pressed" from="KeyboardButton" to="." method="_on_KeyboardButton_pressed"]
